text align fix

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
    display: flex;
+   flex-direction: column;
    justify-content: center;
+   align-items: center;
    margin: auto;
    background-color:burlywood;
 }
-
-#conteiner
  
 
 #author-conteiner {
